--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@types/node": "^22.15.11",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
     "tailwindcss": "^3.4.15",
